[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "reflex_rxchat"
version = "0.1"
description = "Local chat for Reflex applications"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [{ name = "Albert Sola", email = "albert.sola@tardix.net" }]
keywords = [
    "reflex",
    "reflex-custom-components"
]

dependencies = [
    "reflex==0.6.6.post3"
]

classifiers = [
  "Development Status :: 4 - Beta",
]

[project.urls]
Homepage = "https://github.com/albertsola/rxchat"

[project.optional-dependencies]
dev = ["build", "twine"]

[tool.setuptools.packages.find]
where = ["custom_components"]

[tool.poetry]
name = "reflex_rxchat"
version = "0.1.0"
description = "Chat for reflex.dev"
authors = ["Albert Sola <albert.sola@gmail.com>"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
reflex = ">=0.6.6"
aiohttp = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-asyncio = "*"
mypy = "*"
black = "*"
tox = "*"
flake8 = "*"
coverage = "*"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.coverage.run]
omit = [ "*_test.py" ]
command_line = "-m pytest custom_components"
